Details
-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
Description
struct lnet_ioctl_config_ni conf exceeds 1024 limit check
CC [M] /home/shaun/lustre-release/lnet/lnet/api-ni.o
/home/shaun/lustre-release/lnet/lnet/api-ni.c: In function ‘lnet_net_cmd’:
/home/shaun/lustre-release/lnet/lnet/api-ni.c:6513:1: error: the frame size of 1040 bytes is larger than 1024 bytes [-Werror=frame-larger-than=]
6513 | }
| ^