LU-19152 lnet: struct lnet_ioctl_config_ni too large for stack

Dynamically allocate temporary instance to avoid requiring stack

  CC [M]  /home/shaun/lustre-release/lnet/lnet/api-ni.o
api-ni.c: In function 'lnet_net_cmd':
api-ni.c:6513:1: error: the frame size of 1040 bytes is larger \
                 than 1024 bytes [-Werror=frame-larger-than=]
 6513 | }
      | ^

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I02cc4a15a859bd739b979563310e91f235d03981
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60008
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@amazon.com>
Tested-by: jenkins <devops@whamcloud.com>